--- a/layout1/style.css
+++ b/layout1/style.css
@@ -1,9 +1,9 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 * {
     margin: 0;
     padding: 0;
-    font-family: Inter;
+    font-family: Poppins;
     box-sizing: border-box;
 }
 
@@ -57,13 +57,13 @@ nav>a>svg {
     padding: 40px 20px 40px 20px;
 }
 
-section {
+main {
     display: flex;
     height: calc(100vh - 60px - 85px);
 }
 
 footer {
-    height: 60px !important;
+    height: 60px;
 }
 
 .l-cont, .r-cont {
@@ -287,4 +287,140 @@ input[type="checkbox"]::before {
     color: #fff; 
     text-align: center;
     line-height: 20px; 
+  }
+
+main>.er-msg {
+    margin: auto;
+
+}
+
+#preloader {
+    z-index: 9;
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    position: absolute;
+    align-items: center;
+    background-color: #fff;
+    justify-content: center;
+}
+
+#preloader>.logo {
+    display: flex;
+    align-items: center;
+}
+
+#preloader>.logo>img:nth-child(2) {
+    padding: 22px 20px 40px 20px;
+    background-color: #e71f79;
+    margin-right: 10px;
+    height: 100px;
+    z-index: 9;
+    user-select: none;
+    position: absolute;
+    animation: moveLeft 1.5s ease forwards, blink 1.5s infinite 1.5s;
+}
+
+#preloader>.logo>img:last-child {
+    height: 70px;
+    position: absolute;
+    user-select: none;
+    animation: moveRight 1.5s ease forwards, blink 1.5s infinite 1.5s;
+}
+
+.white-bg {
+    width: 150px;
+    height: 100px;
+    z-index: 1;
+    position: absolute;
+    left: calc(100vw / 2 - 200px);
+    background-color: white;
+}
+
+@keyframes moveRight {
+    0% {
+        left: calc(100vw /2 - 200px);
+    }
+    100% {
+        left: calc(100vw / 2 + 130px);
+        position: static;
+    }
+}
+
+@keyframes moveLeft {
+    0% {
+        right: calc(100vw / 2);
+    }
+    100% {
+        right: calc(100vw / 2  + 80px);
+        position: static;
+    }
+}
+
+@keyframes blink {
+    0% {
+        opacity: 1;
+    }
+    50% {
+        opacity: 0.5;
+    }
+    100% {
+        opacity: 1;
+    }
+}
+
+@media screen and (max-width: 600px) {
+    header {
+        padding: 20px!important;
+    }
+
+    nav {
+        display: none;
+    }
+
+    main {
+        /* // display: block!important; */
+        flex-direction: column;
+        height: unset!important;
+        position: relative;
+    }
+
+    .l-cont,.r-cont {
+        width: unset!important;
+    }
+
+    .r-cont {
+        order: -1;
+        padding: 30px;
+        .login {
+            width: 100%!important;
+            margin-top: 25px!important;
+            button {
+                width: 100%;
+            }
+        }
+    }
+
+    .l-cont {
+        padding:0 30px 30px;
+        .slide {
+            height: 280px;
+            img {
+                border-radius: 10px;
+            }
+        }
+    }
+
+    footer {
+        height: unset!important;
+        flex-direction: column;
+        padding: 10px 0!important;
+        .social {
+            order: -1;
+            span {
+                display: none!important;
+            }
+        }
+    }
+
   }
